feat: :sparkles: add routes, layout and initial theme

--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -4,7 +4,7 @@ import Layout from "../components/Layout.astro"
 
 <Layout>
 
-    <h1 class="text-warning">Pagina inicial</h1>
+    <h1 class="text-info">Contacto</h1>
     <p>Prueba</p>
 
 </Layout>
