--- a/src/pages/publicaciones.astro
+++ b/src/pages/publicaciones.astro
@@ -4,7 +4,7 @@ import Layout from "../components/Layout.astro"
 
 <Layout>
 
-    <h1 class="text-warning">Pagina inicial</h1>
+    <h1 class="text-info">Publicaciones</h1>
     <p>Prueba</p>
 
 </Layout>
