style: :lipstick: add images and pdf

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header
   class="bg-primary flex justify-center items-center md:justify-between xl:px-52 md:px-24"
 >
-  <img src="LIRFFF-logo-fi.png" alt="" class="w-52 mr-4" />
+  <img src="/Img/Components/LIRFFF-logo-fi.png" alt="" class="w-52 mr-4" />
   <ul class="hidden md:block text-sm">
     <li>
       <i class="fa-solid fa-envelope text-accent"></i>
