feat: :sparkles: add publications

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import Layout from "../components/Layout.astro";
     </div>
 
     <div class="flex justify-center items-center bg-info min-h-[150px] md:order-4">
-      <a href="/miembros" class="hover:scale-105 duration-300"
+      <a href="/docencia" class="hover:scale-105 duration-300"
         >Docencia</a
       >
     </div>
@@ -51,7 +51,7 @@ import Layout from "../components/Layout.astro";
     </div>
 
     <div class="flex justify-center items-center bg-info min-h-[150px] md:order-5 lg:order-6">
-      <a href="/miembros" class="hover:scale-105 duration-300"
+      <a href="/divulgacion" class="hover:scale-105 duration-300"
         >Divulgacion</a
       >
     </div>
