feat: :sparkles: add members

--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -1,4 +1,4 @@
-<div class="drawer font-exo">
+<div class="drawer font-exo z-10 sticky top-0">
   <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content">
     <!-- Navbar -->
