--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -1,13 +1,23 @@
-<div class="drawer font-exo z-10 sticky top-0">
+<div class="drawer z-40 font-exo">
   <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
-  <div class="drawer-content">
+  <div class="drawer-content flex flex-col py-5">
     <!-- Navbar -->
     <div
-      class="w-full navbar bg-secondary flex justify-center items-center md:justify-between xl:px-52 md:px-24"
+      class="w-full navbar text-black justify-between container mx-auto"
     >
-      <div class="flex-1 text-4xl font-medium">LIRF<sup>3</sup></div>
-      <div class="flex-none hidden lg:block">
-        <ul class="menu menu-horizontal text-base">
+      <a href="/"
+        class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600"
+      >
+        LIRF<sup class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">3</sup>
+      </a>
+      <div class="flex-none md:hidden">
+        <p class="pr-4">Menú</p>
+        <label for="my-drawer-3" aria-label="open sidebar" class="w-fit">
+          <i class="fa-solid fa-bars hover:cursor-pointer hover:scale-110"></i>
+        </label>
+      </div>
+      <div class="flex-none hidden md:block">
+        <ul class="menu-horizontal [&>li>a]:inline-block [&>li>a]:px-4">
           <!-- Navbar menu content here -->
           <li><a href="/">inicio</a></li>
           <li><a href="/publicaciones">Publicaciones</a></li>
@@ -17,26 +27,14 @@
           <li><a href="/contacto">Contacto</a></li>
         </ul>
       </div>
-      <div class="flex-none lg:hidden">
-        <label for="my-drawer-3" class="btn btn-square btn-ghost">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            class="inline-block w-8 h-8 stroke-current"
-            ><path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M4 6h16M4 12h16M4 18h16"></path></svg
-          >
-        </label>
-      </div>
     </div>
   </div>
   <div class="drawer-side">
-    <label for="my-drawer-3" class="drawer-overlay"></label>
-    <ul class="menu p-4 w-80 min-h-full bg-base-200">
+    <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"
+    ></label>
+    <ul
+      class="w-80 min-h-full [&>li>a]:inline-block flex flex-col justify-evenly flex-1 text-center bg-base-200"
+    >
       <!-- Sidebar content here -->
       <li><a href="/">inicio</a></li>
       <li><a href="/publicaciones">Publicaciones</a></li>
@@ -47,3 +45,34 @@
     </ul>
   </div>
 </div>
+
+<style>
+  a:after {
+    display: block;
+    content: "";
+    border-bottom: solid 3px #ecb365;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+  }
+  a:hover:after {
+    transform: scaleX(1);
+  }
+</style>
+
+<!-- <div class="drawer-side">
+  <div class="w-full min-h-screen bg-primary flex flex-col relative">
+    <label for="my-drawer-3" aria-label="close sidebar" class="w-fit bg-orange-800">
+      <i class="fa-solid fa-xmark fa-2xl absolute right-10 top-10 hover:cursor-pointer hover:scale-110"></i>
+    </label>
+    <ul
+      class="[&>li>a]:inline-block flex flex-col justify-evenly flex-1 text-center"
+    >
+      <li><a href="/">inicio</a></li>
+      <li><a href="/publicaciones">Publicaciones</a></li>
+      <li><a href="/miembros">Miembros</a></li>
+      <li><a href="/docencia">Docencia</a></li>
+      <li><a href="/divulgacion">Divulgacion</a></li>
+      <li><a href="/contacto">Contacto</a></li>
+    </ul>
+  </div>
+</div> -->
