--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -21,8 +21,8 @@ import "../styles/global.css"
 
   </head>
 
-  <body>
-    <Header />
+  <body class="bg-slate-200">
+    <!-- <Header /> -->
     <Drawer />
     <slot />
     <Footer />
