--- a/src/pages/docencia.astro
+++ b/src/pages/docencia.astro
@@ -4,7 +4,8 @@ import Layout from "../components/Layout.astro"
 
 <Layout>
 
-    <h1 class="text-info">Docencia</h1>
-    <p>Prueba</p>
+    <div class="">
+        hola
+    </div>
 
 </Layout>
