--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,66 +3,75 @@ import Layout from "../components/Layout.astro";
 ---
 
 <Layout>
-  <div
-    class="grid md:grid-cols-2 lg:grid-cols-4 gap-1 py-1 text-3xl text-black font-title bg-[#d3d3d3]"
-  >
-    <div class="md:col-span-2 lg:col-span-4  max-h-[550px]">
-      <img
-        class="h-full w-full object-cover object-bottom"
-        src="/Img/Home/LIRFFF-grupal.jpg"
-        alt=""
-      />
-    </div>
+  <p class="text-center p-16 text-black text-5xl">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perspiciatis
+    corporis et, nobis vitae quas sint
+  </p>
+  <div class="w-5/6 mx-auto">
+    <div
+      class="grid md:grid-cols-2 lg:grid-cols-4 gap-4 py-1 text-3xl text-black font-title"
+    >
+      <div class="md:col-span-2 lg:col-span-3 max-h-[550px]">
+        <img
+          class="h-full w-full object-cover object-bottom rounded-lg"
+          src="/Img/Home/LIRFFF-grupal.jpg"
+          alt=""
+        />
+      </div>
 
-    <div class="md:col-span-2">
-      <img
-        class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic2.jpg"
-        alt=""
-      />
-    </div>
+      <div class="md:col-span-2">
+        <img
+          class="w-full object-cover object-bottom h-72 rounded-lg"
+          src="/Img/Home/LIRFFF-Mosaic2.jpg"
+          alt=""
+        />
+      </div>
 
-    <div class="flex justify-center items-center bg-info min-h-[150px] md:order-1">
-      <a href="/miembros" class="hover:scale-105 duration-300"
-        >¿Quienes somos?</a
+      <div
+        class="flex justify-center items-center bg-info min-h-[150px] md:order-1 rounded-lg"
       >
-    </div>
+        <a href="/miembros" class="hover:scale-105 duration-300"
+          >¿Quienes somos?</a
+        >
+      </div>
 
-    <div class="md:order-2">
-      <img
-        class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic4.jpg"
-        alt=""
-      />
-    </div>
+      <div class="md:order-2">
+        <img
+          class="w-full object-cover object-bottom h-72 rounded-lg"
+          src="/Img/Home/LIRFFF-Mosaic4.jpg"
+          alt=""
+        />
+      </div>
 
-    <div class="flex justify-center items-center bg-info min-h-[150px] md:order-4">
-      <a href="/docencia" class="hover:scale-105 duration-300"
-        >Docencia</a
+      <div
+        class="flex justify-center items-center bg-info min-h-[150px] md:order-4 rounded-lg"
       >
-    </div>
+        <a href="/docencia" class="hover:scale-105 duration-300">Docencia</a>
+      </div>
 
-    <div class="md:order-3">
-      <img
-        class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic3.jpg"
-        alt=""
-      />
-    </div>
+      <div class="md:order-3">
+        <img
+          class="w-full object-cover object-bottom h-72 rounded-lg"
+          src="/Img/Home/LIRFFF-Mosaic3.jpg"
+          alt=""
+        />
+      </div>
 
-    <div class="flex justify-center items-center bg-info min-h-[150px] md:order-5 lg:order-6">
-      <a href="/divulgacion" class="hover:scale-105 duration-300"
-        >Divulgacion</a
+      <div
+        class="flex justify-center items-center bg-info min-h-[150px] md:order-5 lg:order-6 rounded-lg"
       >
-    </div>
+        <a href="/divulgacion" class="hover:scale-105 duration-300"
+          >Divulgacion</a
+        >
+      </div>
 
-    <div class="md:order-6 lg:order-5">
-      <img
-        class="w-full object-cover object-bottom h-72"
-        src="/Img/Home/LIRFFF-Mosaic1.jpg"
-        alt=""
-      />
+      <div class="md:order-6 lg:order-5">
+        <img
+          class="w-full object-cover object-bottom h-72 rounded-lg"
+          src="/Img/Home/LIRFFF-Mosaic1.jpg"
+          alt=""
+        />
+      </div>
     </div>
-
   </div>
 </Layout>
