--- a/src/pages/miembros.astro
+++ b/src/pages/miembros.astro
@@ -7,7 +7,7 @@ import Apoyo from "../../utils/apoyo.json";
 ---
 
 <Layout>
-  <div class="bg-slate-200">
+  <div class="">
     <h2 class="text-center p-20 text-4xl text-slate-800 font-medium">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, quas.
     </h2>
