--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,7 +10,7 @@ const {id, name, img, category} = Astro.props;
 
 ---
 
-<div class="card card-compact h-96 bg-slate-200 border border-slate-300 shadow-md">
+<div class="card card-compact h-96 bg-white border shadow-sm">
   <figure>
     <img src={img} alt="miebro" class="w-full h-full object-cover object-top"/>
   </figure>
