--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -1,14 +1,14 @@
-<div class="drawer z-40 font-exo">
+<div class="drawer z-40 font-exo bg-secondary">
   <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
-  <div class="drawer-content flex flex-col py-5">
+  <div class="drawer-content flex flex-col">
     <!-- Navbar -->
     <div
-      class="w-full navbar text-black justify-between container mx-auto"
+      class="w-full navbar text-white justify-between container mx-auto"
     >
       <a href="/"
         class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600"
       >
-        LIRF<sup class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">3</sup>
+        LIRF<sup class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-pink-600 to-purple-400">3</sup>
       </a>
       <div class="flex-none md:hidden">
         <p class="pr-4">Menú</p>
@@ -47,6 +47,9 @@
 </div>
 
 <style>
+  a:hover {
+    color: #ecb365;
+  }
   a:after {
     display: block;
     content: "";
