--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -2,7 +2,7 @@
 import Drawer from "./Drawer.astro";
 import Footer from "./Footer.astro";
 import Header from "./Header.astro";
-import "../styles/global.css"
+import "../styles/global.css";
 ---
 
 <!doctype html>
@@ -13,12 +13,17 @@ import "../styles/global.css"
     <title>LirfffWeb</title>
 
     <!-- Google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Montserrat:wght@300;400;500;700;900&family=Oswald:wght@300;500;700&family=Raleway:wght@300;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Merriweather+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;700;900&family=Oswald:wght@300;500;700&family=Raleway:wght@300;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <script src="https://kit.fontawesome.com/9297303f14.js" crossorigin="anonymous"></script>
-
+    <script
+      src="https://kit.fontawesome.com/9297303f14.js"
+      crossorigin="anonymous"></script>
   </head>
 
   <body class="bg-slate-200">
