--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,10 +1,53 @@
 ---
-import Layout from "../components/Layout.astro"
+import Layout from "../components/Layout.astro";
 ---
 
 <Layout>
-
-    <h1 class="text-info">Contacto</h1>
-    <p>Prueba</p>
-
+  <div class="w-4/5 mx-auto py-10">
+    <div class="text-black grid lg:grid-cols-2 py-10">
+      <div class="flex flex-col justify-center">
+        <h2 class="text-2xl font-medium">Contacto</h2><br />
+        <span class="leading-loose text-lg font-light"> Si tienes alguna
+          pregunta, comentario o simplemente quieres saludarnos, no dudes en
+          ponerte en contacto. Estamos aquí para escucharte y ayudarte en todo
+          lo que necesites.
+        </span>
+        <ul class="font-light">
+            <li class="py-1">
+              <i class="fa-solid fa-envelope text-primary"></i>
+              <a class="hover:text-info" href="mailto:p.gomora@unam.mx">
+                p.gomora@unam.mx
+              </a>
+            </li>
+            <li class="py-1">
+              <i class="fa-solid fa-envelope text-primary"></i>
+              <a class="hover:text-info" href="mailto:paulinagomora@gmail.com">
+                paulinagomora@gmail.com
+              </a>
+            </li>
+            <li class="py-1">
+              <i class="fa-solid fa-phone text-primary"></i>
+              <a class="hover:text-info" href="tel:+52 1 55 56223017">
+                55-56-22-30-17
+              </a>
+              <span class="ms-2 text-sm">Ext. 114</span>
+            </li>
+          </ul>
+      </div>
+      <div class="">
+        <figure class="">
+          <img src="Img/Components/LIRFFF-Contacto1.svg" alt="" class="" />
+        </figure>
+      </div>
+    </div>
+    <div class="flex items-center bg-slate-500">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3764.959886278242!2d-99.18370828889616!3d19.327546881854175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce000504668397%3A0x61798b38b9944e1e!2sIIUNAM%3A%20EDIFICIO%2012%20%22BERNARDO%20QUINTANA%22%20Y%20EDIFICIO%2018%20%22HERMANOS%20CHICUREL%20UZIEL%22!5e0!3m2!1ses!2smx!4v1696735010155!5m2!1ses!2smx"
+          style="border:0;"
+          class="rounded shadow-lg w-full h-96"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
 </Layout>
