--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,72 +3,99 @@ import Layout from "../components/Layout.astro";
 ---
 
 <Layout>
-  <p class="text-center p-16 text-black text-5xl">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perspiciatis
-    corporis et, nobis vitae quas sint
-  </p>
-  <div class="w-5/6 mx-auto">
-    <div
-      class="grid md:grid-cols-2 lg:grid-cols-4 gap-4 py-1 text-3xl text-black font-title"
-    >
-      <div class="md:col-span-2 lg:col-span-3 max-h-[550px]">
+  <h2 class="text-center p-20 text-5xl text-slate-800 font-merriweather font-medium leading-relaxed container mx-auto">
+    Explora nuestro sitio para conocer más sobre <span class="bg-pink-300 rounded-md">nuestro trabajo</span>, proyectos recientes y el equipo de expertos que forma parte de nuestro laboratorio.
+  </h2>
+
+  <div class="grid grid-cols-2 md:grid-cols-4 gap-4 container mx-auto py-5">
+    <div class="grid gap-4">
+      <div>
         <img
-          class="h-full w-full object-cover object-bottom rounded-lg"
-          src="/Img/Home/LIRFFF-grupal.jpg"
+          class="h-auto max-w-full rounded-lg"
+          src="Img/Home/LIRFFF-Mosaic5.jpg"
           alt=""
         />
       </div>
-
-      <div class="md:col-span-2">
+      <div>
         <img
-          class="w-full object-cover object-bottom h-72 rounded-lg"
-          src="/Img/Home/LIRFFF-Mosaic2.jpg"
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg"
           alt=""
         />
       </div>
-
-      <div
-        class="flex justify-center items-center bg-info min-h-[150px] md:order-1 rounded-lg"
-      >
-        <a href="/miembros" class="hover:scale-105 duration-300"
-          >¿Quienes somos?</a
-        >
-      </div>
-
-      <div class="md:order-2">
+      <div>
         <img
-          class="w-full object-cover object-bottom h-72 rounded-lg"
-          src="/Img/Home/LIRFFF-Mosaic4.jpg"
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg"
           alt=""
         />
       </div>
-
-      <div
-        class="flex justify-center items-center bg-info min-h-[150px] md:order-4 rounded-lg"
-      >
-        <a href="/docencia" class="hover:scale-105 duration-300">Docencia</a>
-      </div>
-
-      <div class="md:order-3">
+    </div>
+    <div class="grid gap-4">
+      <div>
         <img
-          class="w-full object-cover object-bottom h-72 rounded-lg"
-          src="/Img/Home/LIRFFF-Mosaic3.jpg"
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg"
           alt=""
         />
       </div>
-
-      <div
-        class="flex justify-center items-center bg-info min-h-[150px] md:order-5 lg:order-6 rounded-lg"
-      >
-        <a href="/divulgacion" class="hover:scale-105 duration-300"
-          >Divulgacion</a
-        >
-      </div>
-
-      <div class="md:order-6 lg:order-5">
+      <div>
         <img
-          class="w-full object-cover object-bottom h-72 rounded-lg"
-          src="/Img/Home/LIRFFF-Mosaic1.jpg"
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg"
+          alt=""
+        />
+      </div>
+    </div>
+    <div class="grid gap-4">
+      <div>
+        <img
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-8.jpg"
+          alt=""
+        />
+      </div>
+    </div>
+    <div class="grid gap-4">
+      <div>
+        <img
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-9.jpg"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-10.jpg"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          class="h-auto max-w-full rounded-lg"
+          src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-11.jpg"
           alt=""
         />
       </div>
