feat: :sparkles: add header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,26 +1,30 @@
-<header
-  class="bg-primary flex justify-center items-center md:justify-between xl:px-52 md:px-24"
+<header class="bg-primary"
 >
-  <img src="/Img/Components/LIRFFF-logo-fi.png" alt="" class="w-52 mr-4" />
-  <ul class="hidden md:block text-sm">
-    <li>
-      <i class="fa-solid fa-envelope text-accent"></i>
-      <a class="hover:text-info" href="mailto:p.gomora@unam.mx">
-        p.gomora@unam.mx
-      </a>
-    </li>
-    <li>
-      <i class="fa-solid fa-envelope text-accent"></i>
-      <a class="hover:text-info" href="mailto:paulinagomora@gmail.com">
-        paulinagomora@gmail.com
-      </a>
-    </li>
-    <li>
-      <i class="fa-solid fa-phone text-accent"></i>
-      <a class="hover:text-info" href="tel:+52 1 55 56223017">
-        55-56-22-30-17
-      </a>
-      <span class="ms-2 text-sm">Ext. 114</span>
-    </li>
-  </ul>
+  <div class="container mx-auto flex justify-center items-center md:justify-between py-2">
+    <img src="/Img/Components/LIRFFF-logo-fi2.png" alt="" class="w-52 mr-4" />
+    <img src="/Img/Components/LIRFFF-Logo-UNAM.png" alt="" class="w-24 mr-4">
+  </div>
 </header>
+
+
+<!-- <ul class="hidden md:block text-sm">
+  <li>
+    <i class="fa-solid fa-envelope text-accent"></i>
+    <a class="hover:text-info" href="mailto:p.gomora@unam.mx">
+      p.gomora@unam.mx
+    </a>
+  </li>
+  <li>
+    <i class="fa-solid fa-envelope text-accent"></i>
+    <a class="hover:text-info" href="mailto:paulinagomora@gmail.com">
+      paulinagomora@gmail.com
+    </a>
+  </li>
+  <li>
+    <i class="fa-solid fa-phone text-accent"></i>
+    <a class="hover:text-info" href="tel:+52 1 55 56223017">
+      55-56-22-30-17
+    </a>
+    <span class="ms-2 text-sm">Ext. 114</span>
+  </li>
+</ul> -->
