--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -27,7 +27,7 @@ import "../styles/global.css";
   </head>
 
   <body class="bg-slate-200">
-    <!-- <Header /> -->
+    <Header />
     <Drawer />
     <slot />
     <Footer />
