feat: :sparkles: add footer section and new members

--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -1,4 +1,4 @@
-<div class="drawer z-40 font-exo bg-secondary">
+<div class="drawer z-40 font-exo bg-secondary sticky top-0 shadow-xl">
   <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content flex flex-col">
     <!-- Navbar -->
@@ -6,9 +6,9 @@
       class="w-full navbar text-white justify-between container mx-auto"
     >
       <a href="/"
-        class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600"
+        class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-800"
       >
-        LIRF<sup class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-pink-600 to-purple-400">3</sup>
+        LIRF<sup class="font-extrabold text-transparent text-4xl bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-800">3</sup>
       </a>
       <div class="flex-none md:hidden">
         <p class="pr-4">Menú</p>
@@ -23,7 +23,7 @@
           <li><a href="/publicaciones">Publicaciones</a></li>
           <li><a href="/miembros">Miembros</a></li>
           <li><a href="/docencia">Docencia</a></li>
-          <li><a href="/divulgacion">Divulgacion</a></li>
+          <li><a href="/divulgacion">Divulgación</a></li>
           <li><a href="/contacto">Contacto</a></li>
         </ul>
       </div>
