--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -6,7 +6,7 @@ import "../styles/global.css";
 ---
 
 <!doctype html>
-<html lang="en" data-theme="business">
+<html lang="es" data-theme="business">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
