--- a/src/pages/docencia.astro
+++ b/src/pages/docencia.astro
@@ -1,11 +1,62 @@
 ---
-import Layout from "../components/Layout.astro"
+import Layout from "../components/Layout.astro";
 ---
 
 <Layout>
+  <div class="container mx-auto">
+    <h2
+      class="text-center py-10 text-5xl text-slate-800 font-merriweather font-medium leading-relaxed container mx-auto"
+    >
+      Docencia
+    </h2>
+    <div class="grid md:grid-cols-2">
+      <div
+        class="bg-white border border-gray-200 rounded-lg shadow"
+      >
+      <div class="h-[300px] flex items-center">
+          <a href="#">
+            <img
+              class="rounded-t-lg"
+              src="Img/Components/LIRFFF-Genero.jpeg"
+              alt=""
+            />
+          </a>
+      </div>
+        <div class="p-5 bg-blue-500">
+          <a href="#">
+            <h5
+              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+            >
+              Noteworthy technology acquisitions 2021
+            </h5>
+          </a>
+          <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+            Here are the biggest enterprise technology acquisitions of 2021 so
+            far, in reverse chronological order.
+          </p>
+          <a
+            href="#"
+            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          >
+            Read more
+            <svg
+              class="w-3.5 h-3.5 ml-2"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 14 10"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
 
-    <div class="">
-        hola
     </div>
-
+  </div>
 </Layout>
